cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_arithmetic_1_cmp_2.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/arithmetic\").arg(\"analyze\").arg(\"compare\").arg(\"policies1.cedar\").arg(\"policies2.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
+---------------+------------+--------------+---------------------------------------------------------------------------+
| PrincipalType | ActionName | ResourceType | Result                                                                    |
+---------------+------------+--------------+---------------------------------------------------------------------------+
| User          | view       | Thing        | pset1 is more permissive than pset2                                       |
|               |            |              | Example: principal: User::"", action: Action::"view", resource: Thing::"" |
|               |            |              | context: { n: <integer> }                                                         |
|               |            |              | entities: [                                                               |
|               |            |              |   Action::"view",                                                         |
|               |            |              |   Thing::"" {                                                             |
|               |            |              |     n: <integer>,                                                                 |
|               |            |              |   },                                                                      |
|               |            |              |   User::"" {                                                              |
|               |            |              |     n: <integer>,                                                                 |
|               |            |              |   },                                                                      |
|               |            |              | ]                                                                         |
+---------------+------------+--------------+---------------------------------------------------------------------------+
