cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_arithmetic_3_cmp_4.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/arithmetic\").arg(\"analyze\").arg(\"compare\").arg(\"policies3.cedar\").arg(\"policies4.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
+---------------+------------+--------------+----------------------------------------------------------------------------------------------------------+
| PrincipalType | ActionName | ResourceType | Result                                                                                                   |
+---------------+------------+--------------+----------------------------------------------------------------------------------------------------------+
| User          | view       | Thing        | pset1 is incomparable with pset2                                                                         |
|               |            |              | Example where pset1 is more permissive: principal: User::"", action: Action::"view", resource: Thing::"" |
|               |            |              | context: { n: <integer> }                                                                                        |
|               |            |              | entities: [                                                                                              |
|               |            |              |   Action::"view",                                                                                        |
|               |            |              |   Thing::"" {                                                                                            |
|               |            |              |     n: <integer>,                                                                                             |
|               |            |              |   },                                                                                                     |
|               |            |              |   User::"" {                                                                                             |
|               |            |              |     n: <integer>,                                                                                                |
|               |            |              |   },                                                                                                     |
|               |            |              | ]                                                                                                        |
|               |            |              |                                                                                                          |
|               |            |              | Example where pset1 is less permissive: principal: User::"", action: Action::"view", resource: Thing::"" |
|               |            |              | context: { n: <integer> }                                                                                        |
|               |            |              | entities: [                                                                                              |
|               |            |              |   Action::"view",                                                                                        |
|               |            |              |   Thing::"" {                                                                                            |
|               |            |              |     n: <integer>,                                                                                                |
|               |            |              |   },                                                                                                     |
|               |            |              |   User::"" {                                                                                             |
|               |            |              |     n: <integer>,                                                                                             |
|               |            |              |   },                                                                                                     |
|               |            |              | ]                                                                                                        |
+---------------+------------+--------------+----------------------------------------------------------------------------------------------------------+
