cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_arithmetic_4_cmp_5.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/arithmetic\").arg(\"analyze\").arg(\"compare\").arg(\"policies4.cedar\").arg(\"policies5.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
+---------------+------------+--------------+----------------------------------------------------------------------------------------------------------+
| PrincipalType | ActionName | ResourceType | Result                                                                                                   |
+---------------+------------+--------------+----------------------------------------------------------------------------------------------------------+
| User          | view       | Thing        | pset1 is incomparable with pset2                                                                         |
|               |            |              | Example where pset1 is more permissive: principal: User::"", action: Action::"view", resource: Thing::"" |
|               |            |              | context: { n: 0 }                                                                                        |
|               |            |              | entities: [                                                                                              |
|               |            |              |   Action::"view",                                                                                        |
|               |            |              |   Thing::"" {                                                                                            |
|               |            |              |     n: (-9223372036854775807),                                                                           |
|               |            |              |   },                                                                                                     |
|               |            |              |   User::"" {                                                                                             |
|               |            |              |     n: (-9223372036854775808),                                                                           |
|               |            |              |   },                                                                                                     |
|               |            |              | ]                                                                                                        |
|               |            |              |                                                                                                          |
|               |            |              | Example where pset1 is less permissive: principal: User::"", action: Action::"view", resource: Thing::"" |
|               |            |              | context: { n: 0 }                                                                                        |
|               |            |              | entities: [                                                                                              |
|               |            |              |   Action::"view",                                                                                        |
|               |            |              |   Thing::"" {                                                                                            |
|               |            |              |     n: (-1),                                                                                             |
|               |            |              |   },                                                                                                     |
|               |            |              |   User::"" {                                                                                             |
|               |            |              |     n: (-1),                                                                                             |
|               |            |              |   },                                                                                                     |
|               |            |              | ]                                                                                                        |
+---------------+------------+--------------+----------------------------------------------------------------------------------------------------------+
