cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_arithmetic_6_cmp_8.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/arithmetic\").arg(\"analyze\").arg(\"compare\").arg(\"policies6.cedar\").arg(\"policies8.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
+---------------+------------+--------------+----------------------------------------------------------------------------------------------------------+
| PrincipalType | ActionName | ResourceType | Result                                                                                                   |
+---------------+------------+--------------+----------------------------------------------------------------------------------------------------------+
| User          | view       | Thing        | pset1 is incomparable with pset2                                                                         |
|               |            |              | Example where pset1 is more permissive: principal: User::"", action: Action::"view", resource: Thing::"" |
|               |            |              | context: { n: (-9223372036854775808) }                                                                   |
|               |            |              | entities: [                                                                                              |
|               |            |              |   Action::"view",                                                                                        |
|               |            |              |   Thing::"" {                                                                                            |
|               |            |              |     n: (-1),                                                                                             |
|               |            |              |   },                                                                                                     |
|               |            |              |   User::"" {                                                                                             |
|               |            |              |     n: (-1),                                                                                             |
|               |            |              |   },                                                                                                     |
|               |            |              | ]                                                                                                        |
|               |            |              |                                                                                                          |
|               |            |              | Example where pset1 is less permissive: principal: User::"", action: Action::"view", resource: Thing::"" |
|               |            |              | context: { n: 4611686018427387904 }                                                                      |
|               |            |              | entities: [                                                                                              |
|               |            |              |   Action::"view",                                                                                        |
|               |            |              |   Thing::"" {                                                                                            |
|               |            |              |     n: 8646911284551352319,                                                                              |
|               |            |              |   },                                                                                                     |
|               |            |              |   User::"" {                                                                                             |
|               |            |              |     n: 5764607523034234881,                                                                              |
|               |            |              |   },                                                                                                     |
|               |            |              | ]                                                                                                        |
+---------------+------------+--------------+----------------------------------------------------------------------------------------------------------+
