cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_demo_2_1.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/file_share_demo\").arg(\"analyze\").arg(\"compare\").arg(\"policies2.cedar\").arg(\"policies1.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
+---------------+----------------+--------------+-------------------------------------+
| PrincipalType | ActionName     | ResourceType | Result                              |
+---------------+----------------+--------------+-------------------------------------+
| User          | AddEditor      | Document     | pset1 is equivalent to pset2        |
+---------------+----------------+--------------+-------------------------------------+
| User          | AddReader      | Document     | pset1 is equivalent to pset2        |
+---------------+----------------+--------------+-------------------------------------+
| User          | CreateDocument | Drive        | pset1 is equivalent to pset2        |
+---------------+----------------+--------------+-------------------------------------+
| User          | CreateGroup    | Drive        | pset1 is equivalent to pset2        |
+---------------+----------------+--------------+-------------------------------------+
| User          | CreateUser     | Drive        | pset1 is equivalent to pset2        |
+---------------+----------------+--------------+-------------------------------------+
| User          | DeleteUser     | User         | pset1 is more permissive than pset2 |
+---------------+----------------+--------------+-------------------------------------+
| User          | DownloadFile   | Document     | pset1 is equivalent to pset2        |
+---------------+----------------+--------------+-------------------------------------+
| User          | EditFile       | Document     | pset1 is equivalent to pset2        |
+---------------+----------------+--------------+-------------------------------------+
| User          | ViewFile       | Document     | pset1 is equivalent to pset2        |
+---------------+----------------+--------------+-------------------------------------+
